--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -86,4 +86,12 @@
         flex-direction: column-reverse;
         font-size: 14px;
     }
+    .footer-email-input input{
+        width: 100%;
+        font-size: 16px;
+    }
+    .footer-subscribe{
+        font-size: 14px;
+        padding: 14px 20px;
+    }
 }
