--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -85,6 +85,7 @@
         display: flex;
         flex-direction: column-reverse;
         font-size: 14px;
+        margin-bottom: 15px;
     }
     .footer-email-input input{
         width: 100%;
